--- a/schedule_app/pubspec.yaml
+++ b/schedule_app/pubspec.yaml
@@ -12,17 +12,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: # Add this line
+    sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_svg: ^1.0.3
   flutter_native_splash: ^2.1.6
   another_flushbar: ^1.10.25
+  mobx: ^2.0.7
+  flutter_mobx: ^2.0.5
+  dio: 
+  loading_overlay: ^0.3.0
+  provider: ^6.0.3
+  intl: ^0.17.0
+  timezone: ^0.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   flutter_launcher_icons: "^0.9.2"
+  mobx_codegen: ^2.0.7
+  build_runner: ^2.1.10
 
 flutter_icons:
   android: "launcher_icon"
