--- a/schedule_app/pubspec.yaml
+++ b/schedule_app/pubspec.yaml
@@ -1,7 +1,6 @@
 name: schedule_app
 description: A new Flutter project.
 
-
 publish_to: 'none' 
 
 version: 1.0.0+1
@@ -10,20 +9,31 @@ environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+# Flutter setup
   flutter:
     sdk: flutter
-  flutter_localizations: # Add this line
+  flutter_localizations: 
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
+
+# Client Http
+  dio: ^4.0.6
+  provider: ^6.0.3
+
+# UX/UI
   flutter_svg: ^1.0.3
-  flutter_native_splash: ^2.1.6
+  loading_overlay: ^0.3.0
   another_flushbar: ^1.10.25
+
+# State management
   mobx: ^2.0.7
   flutter_mobx: ^2.0.5
-  dio: 
-  loading_overlay: ^0.3.0
-  provider: ^6.0.3
+  google_fonts: ^3.0.1
+
+# Usefull tools
+  flutter_keyboard_visibility: ^5.3.0
+  flutter_dotenv: ^5.0.2
+  pull_to_refresh: ^2.0.0
+  flutter_native_splash: ^2.1.6
   intl: ^0.17.0
   timezone: ^0.8.0
 
@@ -35,17 +45,20 @@ dev_dependencies:
   mobx_codegen: ^2.0.7
   build_runner: ^2.1.10
 
+#App icon
 flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/app_logo.png"
 
+#App assets
 flutter:
   uses-material-design: true
   assets:
-    #- .env
+    - .env
     - assets/images/
 
+#Splash configuration
 flutter_native_splash:
   color: "#7052CC"
   android_12:
