--- a/schedule_app/pubspec.yaml
+++ b/schedule_app/pubspec.yaml
@@ -29,8 +29,12 @@ dependencies:
   flutter_mobx: ^2.0.5
   google_fonts: ^3.0.1
 
+#Maps
+  geocoding: ^2.0.4
+
 # Usefull tools
   flutter_keyboard_visibility: ^5.3.0
+  mask_text_input_formatter: ^2.3.0
   flutter_dotenv: ^5.0.2
   pull_to_refresh: ^2.0.0
   flutter_native_splash: ^2.1.6
